# frarch

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  genindex.html  index.html  index.md  mkdocs.yml  mkgendocs.yaml  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.ci/: list_examples.py  runExample.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yaml  python-app.yml  system_info.py  test-release-candidate.yaml  test.yaml
_modules/: index.html
_modules/frarch/: parser.html
_modules/frarch/datasets/: caltech101.html  mit67.html  oxford_pets.html
_modules/frarch/datasets/transforms/: pil_transforms.html
_modules/frarch/models/: mock.html
_modules/frarch/modules/: checkpointer.html
_modules/frarch/modules/metrics/: base.html  classification_error.html  wrapper.html
_modules/frarch/train/: base_trainer.html  classifier_trainer.html
_modules/frarch/utils/: data.html  exceptions.html  freezable_module_dict.html  stages.html
_modules/frarch/utils/enums/: base.html  stages.html
docs/: conf.py  documentation.md  generate_package_docs.py  index.md  installation.md  reference.md  running_an_experiment.md  testing.md
docs/frarch/: __init__.md  parser.md
docs/frarch/datasets/: __init__.md  caltech101.md  mit67.md  oxford_pets.md
docs/frarch/models/: __init__.md  mock.md
docs/frarch/modules/: __init__.md  checkpointer.md
docs/frarch/train/: __init__.md  base_trainer.md  classifier_trainer.md
docs/frarch/utils/: __init__.md  exceptions.md  freezable_module_dict.md
examples/caltech101/: train.py
examples/caltech101/hparams/: train.yaml
examples/fashion_mnist/hparams/: train.yaml
examples/mit67/hparams/: train.yaml
examples/mit67_tl/: train.py
examples/mit67_tl/hparams/: train.yaml
examples/mnist/hparams/: train.yaml
examples/oxfordPets/: train.py
examples/oxfordPets/hparams/: train.yaml
examples/places365/hparams/: train.yaml
experiments/caltech101/: train_caltech101.py
experiments/caltech101/hparams/: caltech101_vgg11.yaml  caltech101_vgg11_same.yaml  caltech101_vgg11_same_normalized.yaml  caltech101_vgg11_same_normalized_augmented.yaml  caltech101_vgg11_valid.yaml  caltech101_vgg11_valid_normalized.yaml  caltech101_vgg11_valid_normalized_augmented.yaml  train_caltech101.yaml
experiments/fashion_mnist/: train_fashion_mnist.py
experiments/fashion_mnist/hparams/: train_fashion_mnist.yaml
experiments/mit67/: trainmit67.py
experiments/mit67/hparams/: mit67_small.yaml  mit67_vgg11.yaml  mit67_vgg11_augment.yaml  mit67_vgg11_tl_baseline.yaml  mit67_vgg11_tl_baseline_augment.yaml  mit67_vgg11_valid_augment.yaml  train_mit67.yaml
experiments/mnist/: train_mnist.py
experiments/mnist/hparams/: train_mnist.yaml
experiments/oxfordPets/: train_oxfordPets.py
experiments/oxfordPets/hparams/: oxfordPets_vgg11_same.yaml  train_oxfordPets.yaml
experiments/places365/: train_places365.py
experiments/places365/hparams/: train_places365.yaml  train_places365_vgg11.yaml
frarch/: __init__.py  __meta__.py  parser.py
frarch/datasets/: __init__.py  caltech101.py  mit67.py  oxford_pets.py
frarch/datasets/transforms/: __init__.py  pil_transforms.py
frarch/metrics/: __init__.py  base.py  classification_error.py  wrapper.py
frarch/models/: mock.py
frarch/models/classification/: __init__.py
frarch/modules/: __init__.py  checkpointer.py
frarch/modules/metrics/: base.py  classification_error.py  wrapper.py
frarch/train/: __init__.py  base_trainer.py  classifier_trainer.py
frarch/utils/: __init__.py  checkpointer.py  exceptions.py  freezable_module_dict.py  stages.py
frarch/utils/data/: __init__.py
frarch/utils/enums/: base.py
frarch/utils/logging/: __init__.py  create_logger.py
scripts/: generateExperiment.sh  hparams.yaml.template  train.py.template
source/: changelog.html
tests/: test_checkpointer.py  test_dataset.py  test_image_transforms.py  test_metrics.py  test_sample.py  test_train.py  test_utils.py
tests/data/: caltech101_classes.txt  hparam_sample.yaml  mit67_classes.txt
tests/functional/: runFunctionalTests.sh
tests/functional/train_mnist/: train.py  train.yaml
tests/mock/: mocks.py
tests/unit/: test_checkpointer.py  test_cnn_classifiers.py  test_dataset.py  test_image_transforms.py  test_metrics.py  test_train.py  test_utils.py
(+35 files in other folders)
